# gcspathlib

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/actions/init/: action.yml
.github/workflows/: ci.yml
doc/: hierarchy.dot
gcspathlib/: __init__.py  _old_pathlib.py
scripts/: ci
tests/: test__init__.py
