[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool.poetry]
authors = ['Karl Kroening <karlk@kralnet.us>']
description = ''
name = 'gcspathlib'
readme = 'README.md'
version = '0.3.0'

[tool.poetry.dependencies]
python = '^3.11'

[tool.poetry.group.dev.dependencies]
black = '*'
factory-boy = '*'
ipython = '*'
isort = {extras = ['colors'], version = '*'}
mock = '*'
mypy = '*'
pylint = '*'
pytest = '*'
pytest-faker = '*'
pytest-only = '*'
pytest-randomly = '*'
pytest-xdist = '*'
setuptools = '<80'  # TMP/FIXME: workaround for pytest-only being misbehaved
types-mock = '*'
types-setuptools = '*'

[tool.black]
include = '^/(gcspathlib|tests)/.*\.pyi?$'
skip-string-normalization = true
target_version = ['py311']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
ignore_whitespace = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
no_sections = true
use_parentheses = true

[tool.mypy]
files = 'gcspathlib,tests'
mypy_path = 'stubs'
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# allow_redefinition = true
module = 'tests.*'

[[tool.mypy.overrides]]
module = 'gcspathlib.*'
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_optional = true
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = '--pdbcls=IPython.terminal.debugger:Pdb'
filterwarnings = [
    'error::pytest.PytestUnraisableExceptionWarning',
    'error::RuntimeWarning',
    # 'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning:pytest_freezegun',
    'ignore:pkg_resources is deprecated as an API.:DeprecationWarning',  # TMP/FIXME: workaround for pytest-only needing setuptools
]
markers = []
testpaths = ['tests']
